Optimize some of the code and move away from deprecated methods (#138)
* Satisfy the deprecation warnings by updating how falling blocks are handled

* Remove raw usage of PersistentDataType from the enum

* use getFirst()

* Check if worldedit is enabled first, worldguard obviously won't be enabled if worldedit isn't

* use ThreadLocalRandom() instead of new Random()

* update CHANGELOG.md

* bump version